[tool.poetry]
name = "kana-api"
version = "0.1.0"
description = ""
authors = ["Jack Rogers <0djz6wjw@duck.com>"]
readme = "README.md"
packages = [{include = "kana_api"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
flask-login = "^0.6.2"
requests = "^2.31.0"
flask-sqlalchemy = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
